--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   google_sign_in: ^6.2.2
   iconsax_plus: ^1.0.0
   buttons_tabbar: ^1.3.15
+  firebase_storage: ^12.4.5
+  cloud_firestore: ^5.6.7
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
