--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,13 @@ dependencies:
   firebase_storage: ^12.4.5
   cloud_firestore: ^5.6.7
   url_launcher: ^6.3.1
-  intl: ^0.20.2
+
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
+  flutter_local_notifications: ^16.1.0
+  timezone: ^0.9.2
+
 
 dev_dependencies:
   flutter_test:
