--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   url_launcher: ^6.3.1
   device_info_plus: ^10.0.0
   awesome_notifications: ^0.10.1
+  flutter_local_notifications: ^19.2.1
 
 
 
