--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,11 @@ dependencies:
   url_launcher: ^6.3.1
   device_info_plus: ^10.0.0
   awesome_notifications: ^0.10.1
-  flutter_local_notifications: ^19.2.1
+  flutter_local_notifications: ^17.1.2
+  android_intent_plus: ^5.3.0
+  flutter_launcher_icons: ^0.13.1
+  timezone: ^0.9.2
+  flutter_localization: ^0.3.2
 
 
 
@@ -62,6 +66,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
 
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/ic_launcher.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
