--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   timezone: ^0.9.2
   flutter_localization: ^0.3.2
+  intl: ^0.20.2
+  flutter_localizations:
+    sdk: flutter
 
 
 
